# rust-cas-client

./: .gitignore  .upjv_gitlab-ci.yml  Cargo.toml  README.md  env.example
cas-client-actix/: Cargo.toml
cas-client-actix/src/: lib.rs  urls.rs
cas-client-core/: Cargo.toml
cas-client-core/src/: client.rs  lib.rs  user.rs
examples/: actix_example.rs
examples/actix-web-example/: Cargo.toml
examples/actix-web-example/src/: main.rs
src/: actix.rs  lib.rs
src/cas/: mod.rs  user.rs
src/cas/client/: mod.rs  tests.rs
src/frameworks/: actix.rs  mod.rs
