[package]
name = "cas-client"
version = "0.2.0"
authors = ["JMarignale <julien.marignale@gmail.com>"]
edition = "2018"

[lib]
name = "cas_client"
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "cas-client-actix",
    "cas-client-core",
    "examples/actix-web-example",
]

[features]
default = []
actix-framework = [ "cas-client-actix" ]

[dependencies]
# COMMONS
cas-client-core = { path = "./cas-client-core" }

# ACTIX-FRAMEWORK feature
cas-client-actix = { path = "./cas-client-actix", optional = true }

[dev-dependencies]
actix-web = "1.0.9"
actix-files ="0.1.7"
actix-service = "0.4.2"
actix-session = "0.2.0"
dotenv = "0.15.0"
env_logger = "0.7.1"

[[example]]
name = "actix-web-example"
path = "examples/actix-web-example/src/main.rs"
required-features = ["actix-framework"]

[package.metadata.docs.rs]
all-features = true
