[package]
name = "cas-client"
version = "0.4.1"
authors = ["JMarignale <julien.marignale@gmail.com>"]
edition = "2018"

[lib]
name = "cas_client"
path = "src/lib.rs"

[workspace]
members = [
    ".",
    "cas-client-actix",
    "cas-client-core",
    "examples/actix-web-example",
]

[features]
default = []
actix-framework = [ "cas-client-actix" ]

[dependencies]
# COMMONS
cas-client-core = { path = "./cas-client-core" }

# ACTIX-FRAMEWORK feature
cas-client-actix = { path = "./cas-client-actix", optional = true }

[dev-dependencies]
actix-rt = "1.1.1"
actix-web = "3.1.0"
actix-files = "0.4.0"
actix-service = "1.0.6"
actix-session = "0.4.0"
actix-connect = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
trust-dns-resolver = "0.19.5"

[[example]]
name = "actix-web-example"
path = "examples/actix-web-example/src/main.rs"
required-features = ["actix-framework"]

[package.metadata.docs.rs]
all-features = true
