[package]
name = "cas-client-actix"
version = "0.1.0"
authors = ["jmarignale"]
edition = "2018"
workspace = ".."

[lib]
name = "cas_client_actix"
path = "src/lib.rs"

[dependencies]
cas-client-core = { path = "../cas-client-core" }
actix-web = "2.0.0"
actix-service = "1.0.1"
actix-session = "0.3.0"
env_logger = "0.6.1"
futures = "0.3.1"
log = "0.4.6"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"

