[package]
name = "cas-client-actix"
version = "0.1.0"
authors = ["jmarignale"]
edition = "2018"
workspace = ".."

[lib]
name = "cas_client_actix"
path = "src/lib.rs"

[dependencies]
cas-client-core = { path = "../cas-client-core" }
actix-http = "2.0.0"
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-service = "1.0.6"
actix-session = "0.4.0"
env_logger = "0.7.1"
futures = "0.3.6"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"

trust-dns-resolver = "0.19.5"
