[package]
name = "cas-client-core"
version = "0.1.0"
authors = ["jmarignale"]
edition = "2018"
workspace = ".."

[lib]
name = "cas_client_core"
path = "src/lib.rs"

[dependencies]
env_logger = "0.6.1"
log = "0.4.6"
reqwest = "= 0.9.16"
roxmltree = "0.6.1"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
url = "1.7.2"
