[package]
name = "cas-client-core"
version = "0.1.0"
authors = ["jmarignale"]
edition = "2018"
workspace = ".."

[lib]
name = "cas_client_core"
path = "src/lib.rs"

[dependencies]
curl = "0.4.22"
env_logger = "0.6.1"
log = "0.4.6"
roxmltree = "0.6.1"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
url = "1.7.2"
