[package]
name = "cas-client-core"
version = "0.1.0"
authors = ["jmarignale"]
edition = "2018"
workspace = ".."

[lib]
name = "cas_client_core"
path = "src/lib.rs"

[dependencies]
curl = "0.4.31"
env_logger = "0.7.1"
log = "0.4.11"
roxmltree = "0.13.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
url = "2.1.1"
