[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["jmarignale"]
edition = "2018"

[dependencies]
cas-client = { path = "../..", features = ["actix-framework"] }

actix-web = "2.0.0"
actix-files = "0.2.1"
actix-service = "1.0.1"
actix-session = "0.3.0"
dotenv = "0.14.1"
env_logger = "0.6.1"
actix-rt = "1.0.0"
