[package]
name = "actix-web-example"
version = "0.1.0"
authors = ["jmarignale"]
edition = "2018"

[dependencies]
cas-client = { path = "../..", features = ["actix-framework"] }

actix-web = "2.0.0"
actix-files = "0.2.2"
actix-service = "1.0.5"
actix-session = "0.3.0"
dotenv = "0.15.0"
env_logger = "0.7.1"
actix-rt = "1.1.1"
